Fix the missing borders

--- a/src/css/themes/bootstrap3/superhero/modules/infragistics.ui.grid.less
+++ b/src/css/themes/bootstrap3/superhero/modules/infragistics.ui.grid.less
@@ -284,8 +284,8 @@
 
 /* BUG 246065 Marin Popov 23.12.2017 Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode.*/
 .ui-iggrid tbody td {
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
+  border-left: 1px solid @table-border-color;
+  border-right: 1px solid @table-border-color;
 }
 .ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
   border-right: 1px solid @table-border-color;
